# flux

./: CMakeLists.txt  README.md
cmake/Modules/: FindHypre.cmake  FindMetis.cmake  FindMfem.cmake  FindPrecice.cmake
examples/precice/: precice_config.xml  run.sh
examples/simple_run/: icp_2d_farfield.msh  run.sh
flux/: debug_assert.hpp  dummy2D.cpp  flux2D.cpp  flux2D.hpp  flux2D_solver.cpp  flux2D_solver.hpp  flux3D.cpp  flux3D_solver.cpp  flux3D_solver.hpp  flux3Dtransient.cpp  flux3Dtransient_solver.cpp  flux3Dtransient_solver.hpp  mfem_coefficients.hpp  precice_adapter.cpp  precice_adapter.hpp
mesh/: icp_2D_structured.msh  icp_2d_farfield_vol_coupling.msh  icp_r0.08_farfield_flux.msh  square_11x11.msh  square_21x21.msh  square_41x41.msh  square_81x81.msh
